--- a/home/index.html
+++ b/home/index.html
@@ -292,8 +292,8 @@
 
   .sidebar .close-btn {
       position: fixed;
-      top: 16px;
-      left: 16px; /* Move X to top left for sidebar */
+      top: 17px;
+      left: 17px;
       width: 24px;
       height: 24px;
       cursor: pointer;
@@ -304,8 +304,8 @@
 
   .cart-sidebar .close-btn {
       position: fixed;
-      top: 16px;
-      right: 16px; /* Move X to top right for cart sidebar */
+      top: 17px;
+      right: 17px;
       width: 24px;
       height: 24px;
       cursor: pointer;
