--- a/home/index.html
+++ b/home/index.html
@@ -40,6 +40,7 @@
     pointer-events: none; /* Disable pointer events initially */
   }
 
+  /* This is the change: enable pointer-events and background on header-active */
   body.header-active header {
     background-color: #cfcdce;
     pointer-events: auto; /* Enable pointer events when header is active */
