--- a/home/index.html
+++ b/home/index.html
@@ -17,7 +17,7 @@
     background-color: white;
     font-family: 'Oswald', sans-serif;
     user-select: none;
-    height: 100%;
+    min-height: 100vh;
   }
 
   body.sidebar-open, body.cart-open {
