--- a/home/index.html
+++ b/home/index.html
@@ -562,7 +562,7 @@
     <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true" class="jersey-img" alt="Red Jersey" />
   </div>
   <div class="product-info">
-    <div class="product-title" onclick="location.href='/jersey/red'" role="link" tabindex="0" aria-label="View Red Jersey">TWO-FIVE JERSEY</div>
+    <div class="product-title" onclick="location.href='/jersey/red'" role="link" tabindex="0" aria-label="Red Jersey">TWO-FIVE JERSEY</div>
     <div class="product-color">RED</div>
     <div class="product-price">$49.99 USD</div>
   </div>
@@ -571,7 +571,7 @@
     <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" class="jersey-img" alt="White Jersey" />
   </div>
   <div class="product-info">
-    <div class="product-title" onclick="location.href='/jersey/white'" role="link" tabindex="0" aria-label="View White Jersey">TWO-FIVE JERSEY</div>
+    <div class="product-title" onclick="location.href='/jersey/white'" role="link" tabindex="0" aria-label="White Jersey">TWO-FIVE JERSEY</div>
     <div class="product-color">WHITE</div>
     <div class="product-price">$49.99 USD</div>
   </div>
@@ -793,7 +793,6 @@
     setTimeout(() => window.scrollTo({ top: 0, behavior: 'auto' }), 1000);
     location.reload();
   });
-</script>
 </script>
 
 </body>
