--- a/home/index.html
+++ b/home/index.html
@@ -31,7 +31,7 @@
     align-items: center;
     padding: 0 16px;
     height: 120px;
-    position: fixed;
+    position: relative;
     top: 0;
     width: 100%;
     background-color: #cfcdce;
